Implement remote git history

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -83,6 +83,8 @@
     "noHistory": "No commits yet",
     "noRepo": "No git repository detected",
     "remoteNotSupported": "Git is only available for local folders.",
+    "remoteLabel": "Remote",
+    "remoteReadonly": "History (read-only)",
     "diffPlaceholder": "Select a file to view changes",
     "checkoutPrompt": "Switch to branch",
     "createBranchPrompt": "Create new branch",
