feat(mcp): add MCP server configuration UI in settings
Implement complete MCP (Model Context Protocol) server management:
- Add Rust backend with TOML parsing (toml_edit) for config persistence
- Create frontend API layer, hooks, and types for MCP operations
- Add settings section with modern card-based UI design
- Support STDIO/HTTP/SSE server types with visual indicators
- Enable add/delete/toggle operations via TOML paste interface

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -230,8 +230,35 @@
     "sections": {
       "general": "General",
       "model": "Model",
+      "mcp": "MCP Servers",
       "remote": "Remote Servers",
       "shortcuts": "Shortcuts"
+    },
+    "mcp": {
+      "description": "Manage Model Context Protocol (MCP) servers to provide additional tools and context to Codex",
+      "addServer": "Add Server",
+      "add": "Add",
+      "adding": "Adding...",
+      "cancel": "Cancel",
+      "edit": "Edit",
+      "delete": "Delete",
+      "enable": "Enable",
+      "disable": "Disable",
+      "enabled": "Enabled",
+      "disabled": "Disabled",
+      "refresh": "Refresh",
+      "loading": "Loading...",
+      "tomlConfig": "TOML Configuration",
+      "pasteTomlHint": "Paste the TOML configuration of your MCP server to add it",
+      "example": "Example",
+      "copy": "Copy",
+      "empty": "No MCP Servers",
+      "emptyHint": "Click the \"Add Server\" button above to configure your first MCP server",
+      "noConfigDir": "~/.codex directory does not exist. Please initialize Codex CLI first.",
+      "confirmDelete": "Are you sure you want to delete server \"{{id}}\"?",
+      "errors": {
+        "tomlRequired": "TOML configuration is required"
+      }
     },
     "remote": {
       "description": "Remote servers are loaded from ~/.ssh/config. Edit that file to manage entries."
